data/all_generated_tests/raw_wast_tests/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2015.wast
;; 6. **Test Description:** Implement a function with `br_if` and inter-module calls that conditionally returns multiple values, verifying correct multi-value stack handling.    **Constraint Checked:** Validation of stack operations handling multiple return values with `br_if` across module boundaries.    **Relation:** Ensures proper stack state and return value handling for cross-module function calls involving conditional branches.

(assert_invalid
  (module (func (result i32 i32)
    (block (result i32 i32)
      (call $externalFunc)
      (br_if 0 (i32.const 1))
    )
  ))
  "type mismatch"
)